<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_top_corners"
    android:paddingBottom="64dp"
    android:tag="bs_bg">

    <View
        android:id="@+id/view_line"
        android:layout_width="44dp"
        android:layout_height="6dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_grey_stroke"
        android:tag="bs_topline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_search"
        android:tag="bg_et"
        android:id="@+id/bg_foreign"
        app:layout_constraintBottom_toBottomOf="@id/et_foreign"
        app:layout_constraintEnd_toEndOf="@id/et_foreign"
        app:layout_constraintStart_toStartOf="@id/et_foreign"
        app:layout_constraintTop_toTopOf="@id/et_foreign" />

    <EditText
        android:id="@+id/et_foreign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="8dp"
        android:background="@null"
        android:textColorHint="?android:textColorHint"
        android:theme="@style/SuggestionStyle"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/iv_learned"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toTopOf="parent"
        android:tag="tv_beta"
        android:padding="8dp"
        tools:hint="@string/foreign_word"
        android:textColor="@color/gray600"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:inputType="textCapSentences"
        android:textStyle="italic"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_foreign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="et_foreign,bg_foreign" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_search"
        android:tag="bg_et"
        android:id="@+id/bg_rus"
        app:layout_constraintBottom_toBottomOf="@id/et_rus"
        app:layout_constraintEnd_toEndOf="@id/et_rus"
        app:layout_constraintStart_toStartOf="@id/et_rus"
        app:layout_constraintTop_toTopOf="@id/et_rus" />

    <EditText
        android:id="@+id/et_rus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:background="@null"
        android:textColorHint="?android:textColorHint"
        android:theme="@style/SuggestionStyle"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/iv_learned"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@id/et_foreign"
        android:tag="tv_beta"
        android:padding="8dp"
        tools:hint="@string/foreign_word"
        android:textColor="@color/gray600"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:inputType="textCapSentences"
        android:textStyle="italic"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_rus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="bg_rus,et_rus" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_search"
        android:tag="bg_et"
        android:id="@+id/bg_eng"
        app:layout_constraintBottom_toBottomOf="@id/et_eng"
        app:layout_constraintEnd_toEndOf="@id/et_eng"
        app:layout_constraintStart_toStartOf="@id/et_eng"
        app:layout_constraintTop_toTopOf="@id/et_eng" />

    <EditText
        android:id="@+id/et_eng"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:background="@null"
        android:textColorHint="?android:textColorHint"
        android:theme="@style/SuggestionStyle"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/iv_learned"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@id/et_rus"
        android:tag="tv_beta"
        android:padding="8dp"
        tools:hint="@string/foreign_word"
        android:textColor="@color/gray600"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:inputType="textCapSentences"
        android:textStyle="italic"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="bg_eng,et_eng" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_search"
        android:tag="bg_et"
        android:id="@+id/bg_ukr"
        app:layout_constraintBottom_toBottomOf="@id/et_ukr"
        app:layout_constraintEnd_toEndOf="@id/et_ukr"
        app:layout_constraintStart_toStartOf="@id/et_ukr"
        app:layout_constraintTop_toTopOf="@id/et_ukr" />

    <EditText
        android:id="@+id/et_ukr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:background="@null"
        android:textColorHint="?android:textColorHint"
        android:theme="@style/SuggestionStyle"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/iv_learned"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@id/et_eng"
        android:tag="tv_beta"
        android:padding="8dp"
        tools:hint="@string/foreign_word"
        android:textColor="@color/gray600"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:inputType="textCapSentences"
        android:textStyle="italic"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_ukr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="bg_ukr,et_ukr" />

    <ImageView
        android:id="@+id/iv_learned"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_check"
        android:tag="dont_redraw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/barrier_words"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="et_foreign, et_rus, et_eng, et_ukr" />

    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/gray200"
        android:tag="divider_contrast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_ukr" />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:tag="tv_beta"
        android:textColor="@color/gray600"
        android:textSize="14dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_top"
        tools:text="@string/category" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chip_group_categories"
        app:chipSpacing="8dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    <TextView-->
<!--        android:id="@+id/tv_decription"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="8dp"-->
<!--        android:tag="tv_beta"-->
<!--        android:textColor="@color/gray600"-->
<!--        android:textSize="14dp"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/divider_top"-->
<!--        tools:text="@string/word_description" />-->

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/gray200"
        android:tag="divider_contrast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_categories" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_learned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:padding="16dp"
        android:textColor="@drawable/switch_text"
        android:textSize="14sp"
        android:thumb="@drawable/switch_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:switchPadding="16dp"
        app:track="@drawable/switch_track"
        tools:text="@string/word_learned" />

    <ImageView
        android:id="@+id/btn_info"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:tag="dont_redraw"
        android:padding="4dp"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@id/switch_learned"
        app:layout_constraintStart_toEndOf="@id/switch_learned"
        app:layout_constraintTop_toTopOf="@id/switch_learned"
        app:tint="#2196F3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>
